# cppbase

./: .gitignore  README.md  Reflector.hh  cpptools.cpp  cpptools.hh  cpptools.hpp  cpptypes.hh  cpptypes.hpp  run.sh  test.cc  test_any  test_any.cc  test_cpptools  test_cpptools.cc  test_cpptypes  test_cpptypes.cc  test_timer  test_timer.cc
demos/Matrix2D_demo/: main.cc  run.sh
demos/UUID_demo/: main.cc  run.sh
demos/cppnetwork_demo/: mini_client  mini_client.cc  mini_client.py  mini_server  mini_server.cc  run
demos/inctime/: main.cc  run.sh
demos/reflect_demo/: DeriveA.cc  DeriveA.hh  DeriveB.cc  DeriveB.hh  RefBase.hh  run  some.hh
demos/short_str/: CMakeLists.txt  main.cc  run.sh
demos/simplenwtork_demo/: Makefile  client_demo  run  server_demo
include/: InstrumentorTimer.hh  MiniServer.hh  Reflector.hh  cpptools.hh  cpptypes.hh
include/cppnetwork/: MiniClient.hh  MiniServer.hh  SocketCommon.hh
reflect/: DeriveA.hh  DeriveB.hh  main  main.cc  run  some.cc  some.hh
src/: MiniClient.cpp  Reflector.cpp  cpptools.cpp
src/cppnetwork/MiniNetwork/: MiniServer.cpp  SocketCommon.cpp
src/cpptools/: cpptools.cpp
